# Natural-Language-Data-Query-System

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  SampleQueries.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.streamlit/: config.toml
app/: adk_service.py  components.py  smartbi.py  styles.py
business_analyst_agent/: agent.py
data/: event_data_json_examples.json  event_table_data.txt  events_table.txt  session_data.db  session_table_data.txt  sessions_table.txt  tables.txt
diagram/: architecture.mermaid
server/: sqlite_mcp_server.py  test_db.ipynb
