[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.1.1",
    "google-adk[extensions]>=1.27.2",
    "httpx>=0.28.1",
    "mcp[cli]>=1.26.0",
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "clipboard>=0.0.4",
]
